fix: vertically align photos

--- a/src/components/grid.module.scss
+++ b/src/components/grid.module.scss
@@ -1,4 +1,5 @@
 .grid {
+	align-items: center;
 	display: flex;
 	flex-flow: row wrap;
 	margin-bottom: 2em !important;
